@startuml
' Estilo del diagrama
!define table(name) class name << (T,#FFAAAA) >>
!define primary_key(x) <b><color:#b8861b><&key></color> x</b>
!define foreign_key(x) <color:#aaaaaa><&key></color> x
!define column(x) <color:#efefef><&media-record></color> x

' Definición de tablas
table(users) {
  primary_key(id): uuid
  column(name): varchar(255)
  column(email): varchar(255) unique
  column(password): varchar(255)
  column(created_at): timestamp
  column(updated_at): timestamp
}

table(oauth_access_tokens) {
  primary_key(id): varchar(100)
  foreign_key(user_id): uuid null
  column(client_id): bigint
  column(name): varchar(255) null
  column(scopes): text null
  column(revoked): boolean
  column(created_at): timestamp null
  column(updated_at): timestamp null
  column(expires_at): timestamp null
}

table(favorite_gifs) {
  primary_key(id): uuid
  foreign_key(user_id): uuid
  column(gif_id): varchar(255)
  column(alias): varchar(255)
  column(created_at): timestamp
  column(updated_at): timestamp
}

table(api_interactions) {
  primary_key(id): uuid
  foreign_key(user_id): uuid null
  column(service): varchar(255)
  column(request_body): text null
  column(response_code): int
  column(response_body): text null
  column(ip_address): varchar(45)
  column(created_at): timestamp
}

' Notas explicativas
note right of api_interactions
  Registra todas las interacciones con la API:
  - Usuario que realizó la petición
  - Servicio consultado
  - Cuerpo de la petición
  - Código HTTP de la respuesta
  - Cuerpo de la respuesta
  - IP de origen
end note

note right of oauth_access_tokens
  Los tokens tienen una 
  expiración de 30 minutos
end note

note right of favorite_gifs
  Almacena los GIFs favoritos 
  de cada usuario
end note

' Relaciones
users ||--o{ oauth_access_tokens
users ||--o{ favorite_gifs
users ||--o{ api_interactions

@enduml 